DDF-502: From the REST endpoint add support to re-start a resource retrieval from a particular byte offset